@@ -142,42 +142,49 @@ if ($task=='upload'){
     
 	while (!feof($fp)){ 
      		
-			 //if ($nb_imported==1000) break;
-             $ligneoriginal = fgets($fp,4096);  /* On se dplace d'une ligne */   
-			 $ligneoriginal = trim ($ligneoriginal);
-			 $ligneoriginal = strtolower($ligneoriginal);
+			//if ($nb_imported==1000) break;
+			$ligneoriginal = fgets($fp,4096);  /* On se dplace d'une ligne */   
+			$ligneoriginal = trim ($ligneoriginal);
+			$ligneoriginal = strtolower($ligneoriginal);
+			
+			
+			for ($i = 0; $i < strlen($chaine1); $i++)   
+				$ligne = str_replace($chaine1[$i], ' ', $ligneoriginal);
+			
+			$ligne = str_replace(',', '.', $ligne);
+			$val= split(';', $ligne);
+			$val[0]=str_replace('"', '', $val[0]); //DH
+			$val[1]=str_replace('"', '', $val[1]); //DH
+			$val[2]=str_replace('"', '', $val[2]); //DH
+			$val[0]=str_replace("'", '', $val[0]); //DH
+			$val[1]=str_replace("'", '', $val[1]); //DH
+			$val[2]=str_replace("'", '', $val[2]); //DH
+			
+			if ($status!="ok"){ 
+				if($currencytype == "cent")
+				{
+					$val[2] = $val[2] / 100;
+				}
+				break;
+			}
+			//if ($val[2]!='' && strlen($val[2])>0){
+			if (substr($ligne,0,1)!='#' && substr($ligne,0,2)!='"#' && $val[2]!='' && strlen($val[2])>0){
 				
-			 
-			 for ($i = 0; $i < strlen($chaine1); $i++)   
-					$ligne = str_replace($chaine1[$i], ' ', $ligneoriginal);
+				$FG_ADITION_SECOND_ADD_TABLE  = 'cc_ratecard';		
+				$FG_ADITION_SECOND_ADD_FIELDS = 'idtariffplan, id_trunk, dialprefix, destination, rateinitial'; //$fieldtoimport_sql
+				echo "currencytype = $currencytype";
+				if($currencytype == "cent")
+				{
+				$val[2] = $val[2] / 100;
+				}
 				
-			 $ligne = str_replace(',', '.', $ligne);
-			 $val= split(';', $ligne);
-			 $val[0]=str_replace('"', '', $val[0]); //DH
-			 $val[1]=str_replace('"', '', $val[1]); //DH
-			 $val[2]=str_replace('"', '', $val[2]); //DH
-			 $val[0]=str_replace("'", '', $val[0]); //DH
-			 $val[1]=str_replace("'", '', $val[1]); //DH
-			 $val[2]=str_replace("'", '', $val[2]); //DH
-			 
-			 if ($status!="ok") break;
-			 //if ($val[2]!='' && strlen($val[2])>0){
-			 if (substr($ligne,0,1)!='#' && substr($ligne,0,2)!='"#' && $val[2]!='' && strlen($val[2])>0){
-			 
-				 $FG_ADITION_SECOND_ADD_TABLE  = 'cc_ratecard';		
-				 $FG_ADITION_SECOND_ADD_FIELDS = 'idtariffplan, id_trunk, dialprefix, destination, rateinitial'; //$fieldtoimport_sql
-				 if($currencytype == "cent")
-				 {
-				 	$val[2] = $val[2] / 100;
-				 }
-				 
-				 $FG_ADITION_SECOND_ADD_VALUE  = "'".$tariffplanval[0]."', '".$trunkval[0]."', '".$val[0]."', '".$val[1]."', '".$val[2]."'"; //, '".$val[5]."', '".$val[6]."', '".$val[7]."', '".$val[8]."', '".$val[9]."', '".$val[10]."', '".$val[11]."', '".$val[12]."', '".$val[13]."', '".$val[14]."', '".$val[15]."', '".$val[16]."', '".$val[17]."', '".$val[18]."', '".$val[19]."', '".$val[20]."', '".$val[21]."'";
-				 
-				 
-				 
-				 
-				 for ($k=0;$k<count($fieldtoimport);$k++){
-				 	
+				$FG_ADITION_SECOND_ADD_VALUE  = "'".$tariffplanval[0]."', '".$trunkval[0]."', '".$val[0]."', '".$val[1]."', '".$val[2]."'"; //, '".$val[5]."', '".$val[6]."', '".$val[7]."', '".$val[8]."', '".$val[9]."', '".$val[10]."', '".$val[11]."', '".$val[12]."', '".$val[13]."', '".$val[14]."', '".$val[15]."', '".$val[16]."', '".$val[17]."', '".$val[18]."', '".$val[19]."', '".$val[20]."', '".$val[21]."'";
+				
+				
+				
+				
+				for ($k=0;$k<count($fieldtoimport);$k++){
+					
 					if (!empty($val[$k+3]) || $val[$k+3]=='0')
 					{
 						$val[$k+3]=str_replace('"', '', $val[$k+3]); //DH
@@ -189,9 +196,9 @@ if ($task=='upload'){
 						if ($fieldtoimport[$k]=="buyrate" || $fieldtoimport[$k]=="connectcharge" || $fieldtoimport[$k]=="disconnectcharge" )
 						{
 							if($currencytype == "cent")
-							 {
-							 	$val[$k+3] = $val[$k+3] / 100;
-							 }
+							{
+								$val[$k+3] = $val[$k+3] / 100;
+							}
 							
 						} 
 						$FG_ADITION_SECOND_ADD_FIELDS .= ', '.$fieldtoimport[$k];
@@ -205,48 +212,41 @@ if ($task=='upload'){
 						if ($fieldtoimport[$k]=="startdate") $find_stardate = 1;
 						if ($fieldtoimport[$k]=="stopdate") $find_stopdate = 1;
 					}
-				 }
+				}
 				 
-				 if ($find_stardate!=1){
+				if ($find_stardate!=1){
 					$begin_date = date("Y");	
 					$end_date = date("-m-d H:i:s");					
 					$FG_ADITION_SECOND_ADD_FIELDS .= ', startdate';
 			 		$FG_ADITION_SECOND_ADD_VALUE .= ", '".$begin_date.$end_date."'";
-				 }
+				}
 				 
-				 if ($find_stopdate!=1){
+				if ($find_stopdate!=1){
 					$begin_date_plus = date("Y")+10;	
 					$end_date = date("-m-d H:i:s");					
 					$FG_ADITION_SECOND_ADD_FIELDS .= ', stopdate';
 			 		$FG_ADITION_SECOND_ADD_VALUE .= ", '".$begin_date_plus.$end_date."'";
-				 }
-				 
-	
+				}
 					
-				 $TT_QUERY .= "INSERT INTO $sp".$FG_ADITION_SECOND_ADD_TABLE."$sp (".$FG_ADITION_SECOND_ADD_FIELDS.") values (".trim ($FG_ADITION_SECOND_ADD_VALUE).") ";
-											
-				 
-				 $nb_to_import++;
+				$TT_QUERY .= "INSERT INTO $sp".$FG_ADITION_SECOND_ADD_TABLE."$sp (".$FG_ADITION_SECOND_ADD_FIELDS.") values (".trim ($FG_ADITION_SECOND_ADD_VALUE).") ";
+				
+				$nb_to_import++;
 			}
 			
 			if ($TT_QUERY!='' && strlen($TT_QUERY)>0 && ($nb_to_import==1) ){
 				
 				$nb_to_import=0;
-								
 				$result_query =  $DBHandle -> Execute($TT_QUERY);
 				//echo "<br>TT_QUERY:".$TT_QUERY;
 				//echo "<br>ERROR:".$DBHandle -> Error;
 				//echo "<br>RESULT_QUERY:".$result_query;
 				
-								
 				if ($result_query){ 
 					$nb_imported = $nb_imported + 1;
 				}else{$buffer_error.= $ligneoriginal.'<br/>';}
 				$TT_QUERY='';
-				
 			}
 			
-			             
 		} // END WHILE EOF
 		
 		
@@ -292,8 +292,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 }
 
 function sendtoupload(form){
-		
-	
+
 	if (form.the_file.value.length < 2){
 		alert ('Please, you must first select a file !');
 		form.the_file.focus ();
@@ -309,135 +308,129 @@ function sendtoupload(form){
 
 
 
-     
-	  <?php
-	  if ($status=="ok"){
-	  		echo $CC_help_import_ratecard_confirm;
-	  }else{
-			echo $CC_help_import_ratecard_analyse;
-	  }
-	  ?>
-
-
-          
-		<?php  if ($status!="ok"){?> 
+<?php
+if ($status=="ok"){
+	echo $CC_help_import_ratecard_confirm;
+}else{
+	echo $CC_help_import_ratecard_analyse;
+}
+?>
+	
+<?php  if ($status!="ok"){?> 
+	
+<center>As a preview for the import, we have made a quick analyze of the first line of your csv file.<br/>
+Please check out if everything look correct!</center>
+	
+<table align=center border="0" cellpadding="2" cellspacing="2" width="300">
+	<tbody>
+		<tr class="form_head">                  					
+		  <td class="tableBody" style="padding: 2px;" align="center" width="50%"> 
+			<strong> <span class="white_link">FIELD </span> </strong>
+		  </td>
+		  <td class="tableBody" style="padding: 2px;" align="center" width="50%"> 
+			<strong> <span class="white_link">VALUE </span> </strong>
+		  </td>
+		</tr>
+		<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[1]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[1]?>'">  
+		 <td class="tableBody" align="left" valign="top"><font color="red"><b><?php echo strtoupper($fixfield[0])?></b></font></td>
+		 <td class="tableBody" align="center" valign="top"><font color="red"><b><?php echo $tariffplanval[1]?> (<?php echo $tariffplanval[0]?>)</b></font></td>
+		</tr>
+		<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[2]?>'">  
+		 <td class="tableBody" align="left" valign="top"><font color="red"><b><?php echo strtoupper($fixfield[1])?></b></font></td>
+		 <td class="tableBody" align="center" valign="top"><font color="red"><b><?php echo $trunkval[1]?> (<?php echo $trunkval[0]?>)</b></font></td>
+		</tr>
+		<?php  for ($i=0;$i<count($field);$i++){ ?>
+		<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i+1)%2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i+1)%2]?>'">  
+		 <td class="tableBody" align="left" valign="top"><b><?php echo strtoupper($field[$i])?></b></td>
+		 <td class="tableBody" align="center" valign="top"><?php echo $val[$i]?></td>
+		</tr>
+		<?php  } ?>
+		<?php  for ($i=0;$i<count($fieldtoimport);$i++){ ?>
+		<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i)%2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i)%2]?>'">  
+		 <td class="tableBody" align="left" valign="top"><b><?php echo strtoupper($fieldtoimport[$i])?></b></td>
+		 <td class="tableBody" align="center" valign="top"><?php echo $val[$i+3]?></td>
+		</tr>
+		<?php  } ?>
 		
-		<center>As a preview for the import, we have made a quick analyze of the first line of your csv file.<br/>
-		Please check out if everything look correct!</center>
-		
-		<table align=center border="0" cellpadding="2" cellspacing="2" width="300">
-			<tbody>
-                <tr class="form_head">                  					
-                  <td class="tableBody" style="padding: 2px;" align="center" width="50%"> 
-                    <strong> <span class="white_link">FIELD </span> </strong>
-				  </td>
-				  <td class="tableBody" style="padding: 2px;" align="center" width="50%"> 
-                    <strong> <span class="white_link">VALUE </span> </strong>
-				  </td>
-                </tr>
-				<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[1]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[1]?>'">  
-				 <td class="tableBody" align="left" valign="top"><font color="red"><b><?php echo strtoupper($fixfield[0])?></b></font></td>
-				 <td class="tableBody" align="center" valign="top"><font color="red"><b><?php echo $tariffplanval[1]?> (<?php echo $tariffplanval[0]?>)</b></font></td>
-				</tr>
-				<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[2]?>'">  
-				 <td class="tableBody" align="left" valign="top"><font color="red"><b><?php echo strtoupper($fixfield[1])?></b></font></td>
-				 <td class="tableBody" align="center" valign="top"><font color="red"><b><?php echo $trunkval[1]?> (<?php echo $trunkval[0]?>)</b></font></td>
-				</tr>
-				<?php  for ($i=0;$i<count($field);$i++){ ?>
-               	<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i+1)%2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i+1)%2]?>'">  
-				 <td class="tableBody" align="left" valign="top"><b><?php echo strtoupper($field[$i])?></b></td>
-				 <td class="tableBody" align="center" valign="top"><?php echo $val[$i]?></td>
-				</tr>
-				<?php  } ?>
-				<?php  for ($i=0;$i<count($fieldtoimport);$i++){ ?>
-               	<tr bgcolor="<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i)%2]?>"  onMouseOver="bgColor='#C4FFD7'" onMouseOut="bgColor='<?php echo $FG_TABLE_ALTERNATE_ROW_COLOR[($i)%2]?>'">  
-				 <td class="tableBody" align="left" valign="top"><b><?php echo strtoupper($fieldtoimport[$i])?></b></td>
-				 <td class="tableBody" align="center" valign="top"><?php echo $val[$i+3]?></td>
-				</tr>
-				<?php  } ?>
-				
-			</tbody>
-		</table>
-						                  		 
+	</tbody>
+</table>
 
-			
-			
+
 <br></br>
-		<table width="95%" border="0" cellspacing="2" align="center" class="records">
-			
-              <form name="myform" enctype="multipart/form-data" action="CC_ratecard_import_analyse.php" method="post" >
-                <INPUT type="hidden" name="tariffplan" value="<?php echo $tariffplan?>">
-				<INPUT type="hidden" name="trunk" value="<?php echo $trunk?>">
-				<INPUT type="hidden" name="currencytype" value="<?php echo $currencytype?>">
-				<INPUT type="hidden" name="search_sources" value="<?php echo $search_sources?>">
-				
-                <tr> 
-                  <td colspan="2"> 
-                    <div align="center"><span class="textcomment"> 
-                       Please check if the datas above are correct. <br><b>If Yes</b>, you can continue the import. 
-					  Otherwise you must fix your csv file!
-                      </span></div>
-                  </td>
-                </tr>                
-                <tr> 
-                  <td colspan="2"> 
-                    <p align="center">
-                      <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo $my_max_file_size?>">
-                      <input type="hidden" name="task" value="upload">
-					  <input type="hidden" name="status" value="ok">
-                      <input name="the_file" type="file" size="50" onFocus=this.select() class="saisie1">
-                      <input type="submit"  value="Continue to Import the RateCard" onFocus=this.select() class="form_input_button" name="submit1" onClick="sendtoupload(this.form);">
-                      <br>
-                      &nbsp; </p>
-                  </td>
-                </tr>
-                
-                <tr> 
-                  <td  class="bgcolor_014" colspan="2"><b> 
-                    <?php echo $translate[P34_9]?>
-                    </b></td>
-                </tr>
-               
-              </form>
-            </table>
-			
-			<?php }else{ ?>
-			
-			</br>
-			<table width="75%" border="0" cellspacing="2" align="center" class="records">
-			
-				<TR> 
-				  	<TD style="border-bottom: medium dotted #ED2525" align="center">&nbsp;</TD>
-				</TR>
-                <tr> 
-				  <td colspan="2" class="bgcolor_015" style="padding-left: 5px; padding-right: 3px;" align=center>
-                    <div align="center"><span class="textcomment"> 
-                       
-					  <br>
-					  The import of the new TariffPlan have been realized with success!<br>
-					  <?php echo $nb_imported?> new tariff-rates have been imported into your Database.
-                      </span></div>
-					  <br><br>
-					  
-					  
-					  <?php  if (!empty($buffer_error)){ ?>
-					  <center>
-					  	 <b><i>Line that has not been inserted!</i></b>
-						 <div class="myscroll">
-							  <span style="color: red;">
-							  <?php echo $buffer_error?> 
-							  </span>  
-						 </div>
-						</center>
-						<br>
-					 <?php  } ?>
-					 
-                  </td>
-                </tr>
-			</table>
-			
-			<?php }?>
-			<br>
+<table width="95%" border="0" cellspacing="2" align="center" class="records">
+	
+	  <form name="myform" enctype="multipart/form-data" action="CC_ratecard_import_analyse.php" method="post" >
+		<INPUT type="hidden" name="tariffplan" value="<?php echo $tariffplan?>">
+		<INPUT type="hidden" name="trunk" value="<?php echo $trunk?>">
+		<INPUT type="hidden" name="currencytype" value="<?php echo $currencytype?>">
+		<INPUT type="hidden" name="search_sources" value="<?php echo $search_sources?>">
+		
+		<tr> 
+		  <td colspan="2"> 
+			<div align="center"><span class="textcomment"> 
+			   Please check if the datas above are correct. <br><b>If Yes</b>, you can continue the import. 
+			  Otherwise you must fix your csv file!
+			  </span></div>
+		  </td>
+		</tr>                
+		<tr> 
+		  <td colspan="2"> 
+			<p align="center">
+			  <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo $my_max_file_size?>">
+			  <input type="hidden" name="task" value="upload">
+			  <input type="hidden" name="status" value="ok">
+			  <input name="the_file" type="file" size="50" onFocus=this.select() class="saisie1">
+			  <input type="submit"  value="Continue to Import the RateCard" onFocus=this.select() class="form_input_button" name="submit1" onClick="sendtoupload(this.form);">
+			  <br>
+			  &nbsp; </p>
+		  </td>
+		</tr>
+		
+		<tr> 
+		  <td  class="bgcolor_014" colspan="2"><b> 
+			<?php echo $translate[P34_9]?>
+			</b></td>
+		</tr>
+	   
+	  </form>
+	</table>
+	
+	<?php }else{ ?>
+	
+	</br>
+	<table width="75%" border="0" cellspacing="2" align="center" class="records">
+	
+		<TR> 
+			<TD style="border-bottom: medium dotted #ED2525" align="center">&nbsp;</TD>
+		</TR>
+		<tr> 
+		  <td colspan="2" class="bgcolor_015" style="padding-left: 5px; padding-right: 3px;" align=center>
+			<div align="center"><span class="textcomment"> 
+			  <br>
+			  The import of the new TariffPlan have been realized with success!<br>
+			  <?php echo $nb_imported?> new tariff-rates have been imported into your Database.
+			  </span></div>
+			  <br><br>
+			  
+			  <?php  if (!empty($buffer_error)){ ?>
+			  <center>
+				 <b><i>Line that has not been inserted!</i></b>
+				 <div class="myscroll">
+					  <span style="color: red;">
+					  <?php echo $buffer_error?> 
+					  </span>  
+				 </div>
+				</center>
+				<br>
+			 <?php  } ?>
+			 
+		  </td>
+		</tr>
+	</table>
+	
+	<?php }?>
+	<br>
+	
 <?php
 
 $smarty->display('footer.tpl');
